Fixed broken Makefile for simulation subproj. Also added a keep.me file inside bin dir so that the dir is created already when downloading the project from github.

--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -8,17 +8,12 @@ CPPFLAGS := -g -c -O3 -I.
 ARFLAGS :=
 LIBNAME := libsim.a 
  
-all:$(OUTPUTDIR)/Buffer.o \
-	$(OUTPUTDIR)/Event.o \
-	$(OUTPUTDIR)/Process.o \
-	$(OUTPUTDIR)/Simulator.o
-	
+all: $(OUTPUTDIR)/Buffer.o $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Process.o $(OUTPUTDIR)/Simulator.o
 	ar rcs $(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/*o
 
 #compile all classes into %.o files
 $(OUTPUTDIR)/%.o: $(SOURCEDIR)/%.cpp 
 	g++ $(CPPFLAGS) $< -o $@ 
 	
-
 clean:
 	rm -rf $(OUTPUTDIR)/*
