--- a/platform/Makefile
+++ b/platform/Makefile
@@ -3,12 +3,17 @@ LDFLAGS   := -L../models/bin -L../simulator/bin -lmodels -lsim
 OUTPUTDIR :=./bin
 LIBNAME := teste
 
+#APPNAME :=sort.bin
+APPNAME :=code.bin
+
 LIBS:= ../models/bin/libmodels.a ../simulator/bin/libsim.a
 
-all: teste
-	$(OUTPUTDIR)/$(LIBNAME)
+all: $(OUTPUTDIR)/$(LIBNAME)
+	$(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/$(APPNAME)
+	@echo "done."
 	
-teste: main.cpp 
+$(OUTPUTDIR)/$(LIBNAME): main.cpp
 	g++ main.cpp $(GCCFLAGS) -o  $(OUTPUTDIR)/$(LIBNAME) $(LIBS)
 
-
+clean:
+	rm -rf $(OUTPUTDIR)/$(LIBNAME) 
