--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -7,8 +7,11 @@ OUTPUTDIR :=./bin
 CPPFLAGS := -g -c -O3 -I.
 ARFLAGS :=
 LIBNAME := libsim.a 
- 
-all: $(OUTPUTDIR)/Buffer.o $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Process.o $(OUTPUTDIR)/Simulator.o
+
+all: $(OUTPUTDIR)/$(LIBNAME)
+	@echo "done."
+
+$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Buffer.o $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Process.o $(OUTPUTDIR)/Simulator.o
 	ar rcs $(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/*o
 
 #compile all classes into %.o files
