Finished memory model and fixed a bug that prevented binaries from being load at the right location.

--- a/platform/Makefile
+++ b/platform/Makefile
@@ -1,4 +1,4 @@
-GCCFLAGS  := -O3 -g -I../simulator -I../models 
+GCCFLAGS  := -g -I../simulator -I../models 
 LDFLAGS   := -L../models/bin -L../simulator/bin -lmodels -lsim
 OUTPUTDIR :=./bin
 LIBNAME := teste
@@ -9,7 +9,6 @@ APPNAME :=code.bin
 LIBS:= ../models/bin/libmodels.a ../simulator/bin/libsim.a
 
 all: $(OUTPUTDIR)/$(LIBNAME)
-	$(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/$(APPNAME)
 	@echo "done."
 	
 $(OUTPUTDIR)/$(LIBNAME): main.cpp
