added memory dump function to MemoryModel API. Also added a pic for using with the readme file.

--- a/models/Makefile
+++ b/models/Makefile
@@ -10,14 +10,14 @@ LIBNAME   :=libmodels.a
 all: $(OUTPUTDIR)/$(LIBNAME)
 	@echo "done."
 
-$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/HFRiscv.o $(OUTPUTDIR)/MemoryHelper.o
+$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/HFRiscv.o $(OUTPUTDIR)/MemoryModel.o
 	ar rcs $(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/*o
 
 $(OUTPUTDIR)/HFRiscv.o: $(SOURCEDIR)/HFRiscv.cpp HFRiscv.h
 	gcc -c $(SOURCEDIR)/HFRiscv.cpp $(GCCFLAGS) -o $(OUTPUTDIR)/HFRiscv.o $(LDFLAGS)
 
-$(OUTPUTDIR)/MemoryHelper.o: $(SOURCEDIR)/MemoryHelper.cpp MemoryHelper.h
-	gcc -c $(SOURCEDIR)/MemoryHelper.cpp $(GCCFLAGS) -o $(OUTPUTDIR)/MemoryHelper.o $(LDFLAGS)
+$(OUTPUTDIR)/MemoryModel.o: $(SOURCEDIR)/MemoryModel.cpp MemoryModel.h
+	gcc -c $(SOURCEDIR)/MemoryModel.cpp $(GCCFLAGS) -o $(OUTPUTDIR)/MemoryModel.o $(LDFLAGS)
 
 clean:
 	rm -rf bin/*.a 	rm -rf bin/*.o
