Added stub files for DMNI module.

--- a/models/Makefile
+++ b/models/Makefile
@@ -10,7 +10,8 @@ LIBNAME   :=libmodels.a
 all: $(OUTPUTDIR)/$(LIBNAME)
 	@echo "done."
 
-$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/HFRiscv.o $(OUTPUTDIR)/MemoryModel.o
+$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/HFRiscv.o $(OUTPUTDIR)/MemoryModel.o 
+	#$(OUTPUTDIR)/DmniModel.o <<= add to enable DMNI compiilation
 	ar rcs $(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/*o
 
 $(OUTPUTDIR)/HFRiscv.o: $(SOURCEDIR)/HFRiscv.cpp HFRiscv.h
@@ -18,6 +19,9 @@ $(OUTPUTDIR)/HFRiscv.o: $(SOURCEDIR)/HFRiscv.cpp HFRiscv.h
 
 $(OUTPUTDIR)/MemoryModel.o: $(SOURCEDIR)/MemoryModel.cpp MemoryModel.h
 	gcc -c $(SOURCEDIR)/MemoryModel.cpp $(GCCFLAGS) -o $(OUTPUTDIR)/MemoryModel.o $(LDFLAGS)
+	
+$(OUTPUTDIR)/DmniModel.o: $(SOURCEDIR)/DmniModel.cpp DmniModel.h
+	gcc -c $(SOURCEDIR)/DmniModel.cpp $(GCCFLAGS) -o $(OUTPUTDIR)/DmniModel.o $(LDFLAGS)
 
 clean:
 	rm -rf bin/*.a 	rm -rf bin/*.o
