--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -3,7 +3,7 @@ HEADERDIR :=./
 OUTPUTDIR :=./bin
 
 #ar rcs sim-lib.a Process.o Event.o Simulator.o Buffer.o
-
+CPP :=g++
 CPPFLAGS := -g -c -O3 -I.
 ARFLAGS :=
 LIBNAME := libsim.a 
@@ -16,7 +16,7 @@ $(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Buffer.o $(OUTPUTDIR)/Event.o $(OUTPUTDIR)
 
 #compile all classes into %.o files
 $(OUTPUTDIR)/%.o: $(SOURCEDIR)/%.cpp 
-	g++ $(CPPFLAGS) $< -o $@ 
+	$(CPP) $(CPPFLAGS) $< -o $@ 
 	
 clean:
 	rm -rf $(OUTPUTDIR)/*.o $(OUTPUTDIR)/*.a
