added receiver module to dmni. fixed some issues with signed/unsigned comparisons. added some optimization to compilation of components (slower compilation, faster performance)

--- a/models/Makefile
+++ b/models/Makefile
@@ -3,7 +3,7 @@ OUTPUTDIR :=./bin
 
 CPP:=g++
 
-CPPFLAGS  :=-I. -I../simulator -c -g
+CPPFLAGS  :=-I. -I../simulator -c -g -O3 -Wall
 LDFLAGS   :=-l:libudes.a
 
 LIBNAME   :=libmodels.a
