Finished NocRouterModel implementation. An example of use has been added to the platform directory. Also fixed naming convention for Buffer class.

--- a/platform/Makefile
+++ b/platform/Makefile
@@ -3,8 +3,10 @@ LDFLAGS   := -L../models/bin -L../simulator/bin -lmodels -lsim
 OUTPUTDIR :=./bin
 LIBNAME := teste
 
-#APPNAME :=sort.bin
-APPNAME :=code.bin
+#platform to compile
+
+#PLATFORM :=main.cpp
+PLATFORM :=ft_NocRouterModel.cpp
 
 LIBS:= ../models/bin/libmodels.a ../simulator/bin/libsim.a
 
@@ -12,7 +14,9 @@ all: $(OUTPUTDIR)/$(LIBNAME)
 	@echo "done."
 	
 $(OUTPUTDIR)/$(LIBNAME): main.cpp
-	g++ main.cpp $(GCCFLAGS) -o  $(OUTPUTDIR)/$(LIBNAME) $(LIBS)
+	g++ $(PLATFORM) $(GCCFLAGS) -o  $(OUTPUTDIR)/$(LIBNAME) $(LIBS)
 
 clean:
 	rm -rf $(OUTPUTDIR)/$(LIBNAME) 
+
+	
