Buffer moved from Simulation to generics API. MemoryModel moved from Models to Generic API, and renamed to Memory. Makefile reworked to reflect those changes and set to compile hellfireOS as well.

--- a/generics/Makefile
+++ b/generics/Makefile
@@ -5,12 +5,12 @@ OUTPUTDIR :=./bin
 CPP := g++
 CPPFLAGS := -g -c -O3 -I. -Wall
 ARFLAGS :=
-LIBNAME := libsim.a 
+LIBNAME := libgen.a 
 
 all: $(OUTPUTDIR)/$(LIBNAME)
 	@echo "done."
 
-$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Process.o $(OUTPUTDIR)/Simulator.o
+$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Buffer.o $(OUTPUTDIR)/Memory.o 
 	ar rcs $(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/*o
 
 #compile all classes into %.o files
