--- a/platforms/Makefile
+++ b/platforms/Makefile
@@ -1,5 +1,5 @@
-GCCFLAGS  := -g -I../simulator -I../models -Wall -O3 
-LDFLAGS   := -L../models/bin -L../simulator/bin -lmodels -lsim
+GCCFLAGS  := -g -I../simulator -I../models -I../generics -Wall -O3 
+LDFLAGS   := -L../models/bin -L../simulator/bin -L../generics/bin -lmodels -lsim -lgen
 OUTPUTDIR :=./bin
 LIBNAME := teste
 
@@ -10,7 +10,7 @@ LIBNAME := teste
 #PLATFORM :=example_dmni.cpp
 PLATFORM :=3x3-FULL-MPSOC.cpp
 
-LIBS:= ../models/bin/libmodels.a ../simulator/bin/libsim.a
+LIBS:= ../models/bin/libmod.a ../simulator/bin/libsim.a ../generics/bin/libgen.a
 
 all: $(OUTPUTDIR)/$(LIBNAME)
 	@echo "done."
