--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -1,21 +1,23 @@
 SOURCEDIR :=./src
-HEADERDIR :=./
+HEADERDIR :=./include
 OUTPUTDIR :=./bin
 
 CPP := g++
-CPPFLAGS := -g -c -O3 -I. -Wall
+CPPFLAGS := -g -c -O3 -I$(HEADERDIR) -Wall
 ARFLAGS :=
 LIBNAME := libsim.a 
 
 all: $(OUTPUTDIR)/$(LIBNAME)
-	@echo "done."
+	@echo "all done!"
 
-$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Process.o $(OUTPUTDIR)/Simulator.o
+#pack file into a static library to be used later
+$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Model.o $(OUTPUTDIR)/TimedModel.o $(OUTPUTDIR)/UntimedModel.o $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Simulator.o 
 	ar rcs $(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/*o
 
 #compile all classes into %.o files
 $(OUTPUTDIR)/%.o: $(SOURCEDIR)/%.cpp 
 	$(CPP) $(CPPFLAGS) $< -o $@ 
 	
+.PHONY: clean
 clean:
 	rm -rf $(OUTPUTDIR)/*.o $(OUTPUTDIR)/*.a
