fixed THellfireProcessor to adopt the new memory model. Still need to throw exception when acessing unmapped memory space.

--- a/platforms/HFRiscV-3x3NoC-HellfireOS/Makefile
+++ b/platforms/HFRiscV-3x3NoC-HellfireOS/Makefile
@@ -1,7 +1,7 @@
 PROJ_NAME :=HFRiscV-3x3NoC-HellfireOS
 
 
-GCCFLAGS  := -g -I../../simulator/include -I../../models/include -Wall -O3 
+GCCFLAGS  := -g -I../../simulator/include -I../../models/include -Wall -Werror -O3 
 LDFLAGS   := -L../../models/bin -L../../simulator/bin -L../../generics/bin -lmod -lsim 
 OUTPUTDIR :=./bin
 SOURCEDIR :=./src
