fixed a bug that prevented binaries from being loaded at correct location into memory space.

--- a/models/Makefile
+++ b/models/Makefile
@@ -2,7 +2,12 @@ SOURCEDIR :=./src
 OUTPUTDIR :=./bin
 
 CPP:=g++
-CPPFLAGS :=-I./include -I../simulator/include -c -g -O3 -Wall
+
+#some useful flags:
+#"-DNOGUARDS" disables all IFs (not kidding, all guards down!)
+CPPFLAGS :=-I./include -I../simulator/include -c -g -O3 -Wall -DNOGUARDS 
+
+
 
 LIBNAME :=libmod.a
 
