--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/hf-risc"]
 	path = submodules/hf-risc
 	url = https://github.com/sjohann81/hf-risc
+[submodule "submodules/hemps"]
+	path = submodules/hemps
+	url = https://github.com/GaphGroup/hemps
