--- a/tools/terminator_interface/config
+++ b/tools/terminator_interface/config
@@ -87,7 +87,7 @@
       parent = child10
       profile = default
       title = 11
-      command = tail -f ../../logs/HF_1_1_debug.log; bash
+      command = tail -f ./logs/HF_1_1_debug.log; bash
       type = Terminal
       uuid = 7dcf74a6-9df8-43f3-b288-8e95f6a039ec
     [[[terminal12]]]
@@ -95,7 +95,7 @@
       parent = child10
       profile = default
       type = Terminal
-      command = tail -f ../../logs/HF_2_1_debug.log; bash
+      command = tail -f ./logs/HF_2_1_debug.log; bash
       title = 21
       uuid = 5dd6fc5b-7b2d-42c2-b840-a0a47cafce8e
     [[[terminal14]]]
@@ -103,7 +103,7 @@
       parent = child13
       profile = default
       title = 02
-      command = tail -f ../../logs/HF_0_2_debug.log; bash
+      command = tail -f ./logs/HF_0_2_debug.log; bash
       type = Terminal
       uuid = f403df48-7f31-4e92-b8af-c6c148f48729
     [[[terminal16]]]
@@ -111,7 +111,7 @@
       parent = child15
       profile = default
       title = 12
-      command = tail -f ../../logs/HF_1_2_debug.log; bash
+      command = tail -f ./logs/HF_1_2_debug.log; bash
       type = Terminal
       uuid = c60898e9-1372-41d1-8965-30e8a689020e
     [[[terminal17]]]
@@ -119,7 +119,7 @@
       parent = child15
       profile = default
       title = 22
-      command = tail -f ../../logs/HF_2_2_debug.log; bash
+      command = tail -f ./logs/HF_2_2_debug.log; bash
       type = Terminal
       uuid = 92d54f1d-79d9-466d-8446-44628fab87bc
     [[[terminal3]]]
@@ -127,7 +127,7 @@
       parent = child2
       profile = default
       title = 00
-      command = tail -f ../../logs/HF_0_0_debug.log; bash
+      command = tail -f ./logs/HF_0_0_debug.log; bash
       type = Terminal
       uuid = bd400289-813e-4aeb-91d2-358667795d67
     [[[terminal5]]]
@@ -135,7 +135,7 @@
       parent = child4
       profile = default
       title = 10
-      command = tail -f ../../logs/HF_1_0_debug.log; bash
+      command = tail -f ./logs/HF_1_0_debug.log; bash
       type = Terminal
       uuid = 43c474d8-b6a9-475e-88e4-4e17f8719b8d
     [[[terminal6]]]
@@ -143,7 +143,7 @@
       parent = child4
       profile = default
       title = 20
-      command = tail -f ../../logs/HF_2_0_debug.log; bash
+      command = tail -f ./logs/HF_2_0_debug.log; bash
       type = Terminal
       uuid = a813a58d-fb73-4733-a262-a24948ea0528
     [[[terminal9]]]
@@ -151,7 +151,7 @@
       parent = child8
       profile = default
       title = 01
-      command = tail -f ../../logs/HF_0_1_debug.log; bash
+      command = tail -f ./logs/HF_0_1_debug.log; bash
       type = Terminal
       uuid = d8339645-1e44-4e53-b164-3fd987607d1d
 [plugins]
