--- a/platforms/__todo_ModelTest-HFRiscv32/Makefile
+++ b/platforms/__todo_ModelTest-HFRiscv32/Makefile
@@ -1,7 +1,7 @@
 #This is the name of the platform. It is used only 
 #to name the generated executable file and to be
 #displayed during execution of this makefile
-PLATFORM_NAME:=HFRiscV-3x3NoC-HellfireOS
+PLATFORM_NAME:=ModelTest-HFRiscv32
 
 #Path to dependencies. This platform is similulated using
 #URSA, so libsim and libmod are required. 
@@ -24,9 +24,9 @@ SOURCEDIR :=./src
 HELLFIREOS_PATH:=../../submodules/hellfireos/platform/noc_3x3
 HELLFIREOS_ARCH:=../../submodules/hellfireos/arch/riscv/hf-riscv
 #This is the master recipie. It compiles all the stuff and launchs the simulation.
-all: $(LIBSIM) $(LIBMOD) $(OUTPUTDIR)/$(PLATFORM_NAME).exe
+all: $(LIBSIM) $(LIBMOD) $(HELLFIREOS_PATH)/code0.bin $(OUTPUTDIR)/$(PLATFORM_NAME)
 	@echo "$'\e[032mStarting... \e[0m"
-	$(OUTPUTDIR)/$(PLATFORM_NAME).exe ./bin/
+	$(OUTPUTDIR)/$(PLATFORM_NAME) ./bin/code0.bin
 
 #Recipies for compiling dependencies.
 $(LIBSIM):
@@ -38,21 +38,18 @@ $(LIBMOD):
 	@make -C $(LIBMOD_PATH)
 
 $(HELLFIREOS_PATH)/code0.bin:
+	@echo "$'\e[036mPatching HellfireOS... \e[0m"
+	cp hellfire-patch/ni.c $(HELLFIREOS_ARCH)/drivers/ni.c
+	cp hellfire-patch/ni.h $(HELLFIREOS_ARCH)/include/ni.h
+	cp hellfire-patch/arch.mak $(HELLFIREOS_ARCH)/arch.mak
+	cp hellfire-patch/makefile $(HELLFIREOS_PATH)/makefile
 	@echo "$'\e[036mBuilding HellfireOS... \e[0m"
-	@make -C $(HELLFIREOS_PATH) images
+	@make -C $(HELLFIREOS_PATH) images -j8
 	cp $(HELLFIREOS_PATH)/*.bin ./bin
 
-$(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(SOURCEDIR)/platform.cpp
+$(OUTPUTDIR)/$(PLATFORM_NAME): $(SOURCEDIR)/platform.cpp
 	@echo "$'\e[036mBuilding target platform ($(PLATFORM_NAME))... \e[0m"
-	g++ $(SOURCEDIR)/platform.cpp $(GCCFLAGS) $(LDFLAGS) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe
-
-app:
-	@echo "$'\e[033mCleaning HellfireOS... \e[0m"
-	make -C $(HELLFIREOS_PATH) clean
-	rm -rf $(OUTPUTDIR)/code*
-	@echo "$'\e[036mBuilding HellfireOS... \e[0m"
-	@make -C $(HELLFIREOS_PATH) images
-	cp $(HELLFIREOS_PATH)/*.bin ./bin
+	g++ $(SOURCEDIR)/platform.cpp $(GCCFLAGS) $(LDFLAGS) -o $(OUTPUTDIR)/$(PLATFORM_NAME)
 
 #The old, gold cleanup
 clean:
@@ -60,12 +57,10 @@ clean:
 	make -C $(LIBSIM_PATH) clean
 	@echo "$'\e[033mCleaning models library... \e[0m"
 	make -C $(LIBMOD_PATH) clean
+	@echo "$'\e[033mCleaning HellfireOS... \e[0m"
+	make -C $(HELLFIREOS_PATH) clean
 	@echo "$'\e[033mCleaning target platform $(PLATFORM_NAME)... \e[0m"
-	rm -rf $(OUTPUTDIR)/$(PLATFORM_NAME).exe
-
-#@echo "$'\e[033mCleaning logs... \e[0m"
-#rm -rf logs/*.log
-	
-	
+	rm -rf $(OUTPUTDIR)/$(PLATFORM_NAME)
+	rm -rf $(OUTPUTDIR)/code*
 
 
