--- a/platforms/sulphane-generic/Makefile
+++ b/platforms/sulphane-generic/Makefile
@@ -1,7 +1,7 @@
 #This is the name of the platform. It is used only 
 #to name the generated executable file and to be
 #displayed during execution of this makefile
-PLATFORM_NAME:=Sulfane
+PLATFORM_NAME:=Sulphane
 
 #Path to dependencies. This platform is similulated using
 #URSA, so libsim and libmod are required. 
@@ -26,7 +26,7 @@ HELLFIREOS_ARCH:=../../software/hellfireos/arch/riscv/hf-riscv
 
 #This is the master recipie. It compiles all the stuff and launchs the simulation.
 all: $(LIBSIM) $(LIBMOD) $(OUTPUTDIR)/$(PLATFORM_NAME).exe
-	@echo "$'\e[032m==SULFANE==\e[0m"
+	@echo "$'\e[032m==SULPHANE==\e[0m"
 	$(OUTPUTDIR)/$(PLATFORM_NAME).exe ./bin/
 
 #Recipies for compiling dependencies.
@@ -43,9 +43,9 @@ $(HELLFIREOS_PATH)/code0.bin:
 	@make -C $(HELLFIREOS_PATH) images
 	cp $(HELLFIREOS_PATH)/*.bin ./bin
 
-$(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(SOURCEDIR)/Sulfane.cpp $(SOURCEDIR)/ProcessingElement.cpp
+$(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(SOURCEDIR)/Sulphane.cpp $(SOURCEDIR)/ProcessingElement.cpp
 	@echo "$'\e[036mBuilding target platform ($(PLATFORM_NAME))... \e[0m"
-	g++ $(SOURCEDIR)/ProcessingElement.cpp $(SOURCEDIR)/Sulfane.cpp $(GCCFLAGS) $(LDFLAGS) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe -Iinclude
+	g++ $(SOURCEDIR)/ProcessingElement.cpp $(SOURCEDIR)/Sulphane.cpp $(GCCFLAGS) $(LDFLAGS) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe -Iinclude
 
 app:
 	@echo "$'\e[033mCleaning HellfireOS... \e[0m"
