--- a/libs/models/Makefile
+++ b/libs/models/Makefile
@@ -5,7 +5,8 @@ CPP:=g++
 
 #some useful flags:
 #"-DNOGUARDS" disables all IFs (not kidding, all guards down!)
-CPPFLAGS :=-I./include -I../simulator/include -c -g -O3 -Wall -fsanitize=address
+CPPFLAGS :=-I./include -I../simulator/include -c -g -O3 -Wall 
+#-fsanitize=address
 
 LIBNAME :=libmod.a
 
