added energy monitoring to CPU

--- a/libs/simulator/Makefile
+++ b/libs/simulator/Makefile
@@ -13,7 +13,7 @@ all: $(OUTPUTDIR)/$(LIBNAME)
 	@echo "all done!"
 
 #pack file into a static library to be used later
-$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Model.o $(OUTPUTDIR)/TimedModel.o $(OUTPUTDIR)/UntimedModel.o $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Simulator.o 
+$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Metric.o $(OUTPUTDIR)/Model.o $(OUTPUTDIR)/TimedModel.o $(OUTPUTDIR)/UntimedModel.o $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Simulator.o 
 	ar rcs $(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/*o
 
 #compile all classes into %.o files
