a long long time ago, a bug arose from the hell, to defy the weak. I just send it back to where it came, forever (one second ago, to be exact).

--- a/libs/simulator/Makefile
+++ b/libs/simulator/Makefile
@@ -3,8 +3,7 @@ HEADERDIR :=./include
 OUTPUTDIR :=./bin
 
 CPP := g++
-CPPFLAGS := -g -c -Og -I$(HEADERDIR) -Wall -Wextra -Werror 
-#-fsanitize=address
+CPPFLAGS := -g -c -O0 -I$(HEADERDIR) -Wall -Wextra -Werror -fsanitize=address
 
 ARFLAGS :=
 LIBNAME := libsim.a 
