--- a/platforms/sulphane-generic/Makefile
+++ b/platforms/sulphane-generic/Makefile
@@ -14,8 +14,7 @@ LIBSIM:=$(LIBSIM_PATH)/bin/libsim.a
 #Flags to be used during compilation of the platform. Note 
 #that they may be different form flags used for compiling
 #dependencies.
-GCCFLAGS  := -g -I$(LIBSIM_PATH)/include -I$(LIBMOD_PATH)/include -Wextra -Wall -Werror -Og -DENABLE_MONITORING
-#-fsanitize=address
+GCCFLAGS  := -g -I$(LIBSIM_PATH)/include -I$(LIBMOD_PATH)/include -Wextra -Wall -Werror -O0 -DENABLE_MONITORING -fsanitize=address
 
 LDFLAGS   := -L$(LIBSIM_PATH)/bin -L$(LIBMOD_PATH)/bin -lmod -lsim 
 OUTPUTDIR :=./bin
