added stub for TNetSocket module

--- a/libs/simulator/Makefile
+++ b/libs/simulator/Makefile
@@ -3,7 +3,8 @@ HEADERDIR :=./include
 OUTPUTDIR :=./bin
 
 CPP := g++
-CPPFLAGS := -g -c -O0 -I$(HEADERDIR) -Wall -Wextra -Werror -fsanitize=address
+CPPFLAGS := -g -c -O3 -I$(HEADERDIR) -Wall -Wextra -Werror 
+#-fsanitize=address
 
 ARFLAGS :=
 LIBNAME := libsim.a 
