--- a/tools/ros_integration/src/mpsoc_echo/package.xml
+++ b/tools/ros_integration/src/mpsoc_echo/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mpsoc_node</name>
+  <name>mpsoc_echo</name>
   <version>0.0.0</version>
-  <description>The mpsoc_node package</description>
+  <description>The mpsoc_echo package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/mpsoc_node</url> -->
+  <!-- <url type="website">http://wiki.ros.org/mpsoc_echo</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
