(1) replaced router model by a faster one! The new switch control is able to drive multiple packets at once if they are addressed to different ports. (2) Fixed riscv model to emulate the pipeline of the original RTL. It requires three cycles to all non-I/O instruction, while I/O requires four.

--- a/platforms/sulphane-generic/Makefile
+++ b/platforms/sulphane-generic/Makefile
@@ -2,7 +2,7 @@
 #to name the generated executable file and to be
 #displayed during execution of this makefile
 PLATFORM_NAME:=Sulphane
-CONFIG:= -DCYCLES_TO_SIM=1000000 -DNOC_H_SIZE=4 -DNOC_W_SIZE=4
+CONFIG:= -DCYCLES_TO_SIM=10000000 -DNOC_H_SIZE=4 -DNOC_W_SIZE=4
 
 #Path to dependencies. This platform is similulated using
 #URSA, so libsim and libmod are required. 
