--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -1,25 +1,27 @@
+#dir config
 SOURCEDIR :=./src
 HEADERDIR :=./include
 OUTPUTDIR :=./bin
-
-CPP := g++
-CPPFLAGS := -g -c -O3 -I$(HEADERDIR) -Wall -Wextra -Werror 
-#-fsanitize=address
-
-ARFLAGS :=
 LIBNAME := libsim.a 
 
-all: $(OUTPUTDIR)/$(LIBNAME)
-	@echo "all done!"
+CPPFLAGS := -I$(HEADERDIR) -c $(COMPILER_FLAGS) $(OPT_SIMUL_FLAGS)
+
+TARGET_DEPS := \
+	$(OUTPUTDIR)/Event.o \
+	$(OUTPUTDIR)/Model.o \
+	$(OUTPUTDIR)/TimedModel.o \
+	$(OUTPUTDIR)/UntimedModel.o \
+	$(OUTPUTDIR)/Metric.o \
+	$(OUTPUTDIR)/Simulator.o 
 
 #pack file into a static library to be used later
-$(OUTPUTDIR)/$(LIBNAME): $(OUTPUTDIR)/Metric.o $(OUTPUTDIR)/Model.o $(OUTPUTDIR)/TimedModel.o $(OUTPUTDIR)/UntimedModel.o $(OUTPUTDIR)/Event.o $(OUTPUTDIR)/Simulator.o 
+$(OUTPUTDIR)/$(LIBNAME): $(TARGET_DEPS)
 	ar rcs $(OUTPUTDIR)/$(LIBNAME) $(OUTPUTDIR)/*o
 
 #compile all classes into %.o files
 $(OUTPUTDIR)/%.o: $(SOURCEDIR)/%.cpp 
-	$(CPP) $(CPPFLAGS) $< -o $@ 
+	g++ $(CPPFLAGS) $< -o $@ 
 	
-.PHONY: clean
+#remove previously generated files
 clean:
 	rm -rf $(OUTPUTDIR)/*.o $(OUTPUTDIR)/*.a
