--- a/tools/app_loader/Makefile
+++ b/tools/app_loader/Makefile
@@ -1,13 +1,22 @@
+APPNAME = orca-app-loader
+SRCDIR  = ./src
+BINDIR  = ./bin
+INCDIR  = ./include
 
-.PHONY: server client
+CPPFLAGS = -O3 -g -Wall -Wextra -Werror -lpthread -I$(INCDIR)
+TRGTDEPS = \
+	$(BINDIR)/udp_client_server.o \
+	$(BINDIR)/console.o \
+	$(BINDIR)/libhf.o
 
-server:
-	g++ udp_client_server.cpp server.cpp -o server.exe
-	./server.exe
+#compile all classes (.cpp) into %.o files
+$(BINDIR)/%.o: $(SRCDIR)/%.cpp 
+	g++ $(CPPFLAGS) $< -o $@ -c 
 
-client:
-	g++ udp_client_server.cpp client.cpp -o client.exe
-	./client.exe
-	
+#make application executable
+all: $(TRGTDEPS)
+	g++ $(BINDIR)/*.o -o $(BINDIR)/$(APPNAME).exe $(CPPFLAGS)
+	$(BINDIR)/$(APPNAME).exe 2 ./bin/console.o myapp
+
 clear:
-	rm -rf *.exe *.o
+	rm -rf ./bin/*.exe ./bin/*.o
