finished app loader. added configuration parameter to router models so that the noc can get rid of ghost packets (packets that are going to nowhere)

--- a/tools/app_loader/Makefile
+++ b/tools/app_loader/Makefile
@@ -16,7 +16,7 @@ $(BINDIR)/%.o: $(SRCDIR)/%.cpp
 #make application executable
 all: $(TRGTDEPS)
 	g++ $(BINDIR)/*.o -o $(BINDIR)/$(APPNAME).exe $(CPPFLAGS)
-	$(BINDIR)/$(APPNAME).exe 2 ./bin/noc_test4_sender.bin noc_test4_sender
+	$(BINDIR)/$(APPNAME).exe 5 ./bin/noc_test4_sender.bin noc_test4_sender 127.0.0.1 9999
 
 clear:
 	rm -rf ./bin/*.exe ./bin/*.o
