--- a/tools/orca-app-loader/Makefile
+++ b/tools/orca-app-loader/Makefile
@@ -1,13 +1,11 @@
 APPNAME = orca-app-loader
 SRCDIR  = ./src
 BINDIR  = ./bin
-INCDIR  = ./include
+INCS    = -I./include -I../orca-lib/include
 
-CPPFLAGS = -O3 -g -Wall -Wextra -Werror -lpthread -I$(INCDIR)
+CPPFLAGS = -O3 -g -Wall -Wextra -Werror -lpthread $(INCS)
 TRGTDEPS = \
-	$(BINDIR)/udp_client_server.o \
-	$(BINDIR)/console.o \
-	$(BINDIR)/libhf.o
+	$(BINDIR)/app-loader.o
 
 #compile all classes (.cpp) into %.o files
 $(BINDIR)/%.o: $(SRCDIR)/%.cpp 
@@ -15,7 +13,9 @@ $(BINDIR)/%.o: $(SRCDIR)/%.cpp
 
 #make application executable
 all: $(TRGTDEPS)
-	g++ $(BINDIR)/*.o -o $(BINDIR)/$(APPNAME).exe $(CPPFLAGS)
+	make -C ../orca-lib
+	cp ../orca-lib/bin/liborca.a $(BINDIR)
+	g++ $(BINDIR)/*.o $(BINDIR)/liborca.a -o $(BINDIR)/$(APPNAME).exe $(CPPFLAGS)
 	$(BINDIR)/$(APPNAME).exe 5 ./bin/noc_test4_sender.bin noc_test4_sender 127.0.0.1 9999
 
 clean:
